--- a/Creditz-Angular-src/app/history/history.component.html
+++ b/Creditz-Angular-src/app/history/history.component.html
@@ -1,4 +1,4 @@
-  <mat-form-field>
+<mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Enter Keyword">
 </mat-form-field>
@@ -8,25 +8,25 @@
   <table mat-table [dataSource]="dataSource" matSort matSortActive="applicationId" matSortStart="desc" matSortDisableClear  align= "center">
   <!-- Position Column -->
   <ng-container matColumnDef="applicationId">
-    <th mat-header-cell *matHeaderCellDef mat-header="applicationId"> Application Id </th>
+    <th mat-header-cell *matHeaderCellDef mat-header="applicationId" style="color: darkblue"> Application Id </th>
     <td mat-cell *matCellDef="let element"> {{element.applicationId}} </td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="loanAmount">
-    <th mat-header-cell *matHeaderCellDef mat-header> Loan Amount </th>
+    <th mat-header-cell *matHeaderCellDef mat-header style="color: darkblue"> Loan Amount </th>
     <td mat-cell *matCellDef="let element"> {{element.loanAmount}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="loanTenure">
-    <th mat-header-cell *matHeaderCellDef mat-header> loan Tenure </th>
+    <th mat-header-cell *matHeaderCellDef mat-header style="color: darkblue"> loan Tenure </th>
     <td mat-cell *matCellDef="let element"> {{element.loanTenure}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="applicationStatus">
-    <th mat-header-cell *matHeaderCellDef mat-header> Application Status </th>
+    <th mat-header-cell *matHeaderCellDef mat-header style="color: darkblue"> Application Status </th>
     <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
   <!--  <div >
     <td mat-cell *matCellDef="let element"> {{element.applicationStatus}} </td>
@@ -37,6 +37,6 @@
 
   </ng-container>
 
-   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+   <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
 </div>
