--- a/Creditz-Angular-src/app/reset-password/reset-password.component.css
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.css
@@ -6,10 +6,76 @@
 
   /* }  */ 
 
-
-  input[type=email],input[type=password]{
-    width: 150%;
+  button {
+    background-color: #15a085;
+    color: white;
+    padding: 100% 100%;
+    margin: 10% 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  button:hover {
+    opacity: 0.8;
+  }
+  button {
+    outline: none !important;
+    border: none;
+    background: transparent;
+  }
   
+  button:hover {
+    cursor: pointer;
+  }
+
+  .container-login100-form-btn {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 2%;
+  }
+  
+  .login100-form-btn {
+    font-family: Montserrat-Bold;
+    font-size: 15px;
+    line-height: 1.5;
+    color: #fff;
+    text-transform: uppercase;
+  
+    width: 100%;
+    height: 50px;
+    border-radius: 25px;
+    background: #57b846;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2%;
+  
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    transition: all 0.4s;
+  }
+  
+  .login100-form-btn:hover {
+    background: #333333;
+  }
+  
+  .login100-form-btn:disabled{
+    cursor: not-allowed;
+  }
+  
+  input[type=text], input[type=password] {
+    width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
     display: inline-block;
@@ -52,24 +118,6 @@
     font-family: Poppins-Regular, sans-serif;
   }
 
-
-  .wrap-login100 {
-    width:fit-content;
-    background: #fff;
-    /* border-radius: 10%; */
-    overflow: hidden;
-    align-items:center;
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 8% 10% 25% 10%;
-  }
-
-
 .container-login100 {
     width: 50%;
     min-height:fit-content;
@@ -98,10 +146,9 @@
 .limiter {
     width: 80%;
     margin: 0 0;
-    height:80%
   }
   .wrap-login100 {
-    width:fit-content;
+    width:80%;
     background: #fff;
     /* border-radius: 10%; */
     overflow: hidden;
