--- a/Creditz-Angular-src/app/reset-password/reset-password.component.html
+++ b/Creditz-Angular-src/app/reset-password/reset-password.component.html
@@ -1,18 +1,13 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <title>Change Password</title>
+<title>Change Password</title>
 <body>
-<div class="limiter"style=" width:70%; margin-left:25% ">
-    <div class="container-login100">
-        <div class="wrap-login100">
+<div class="limiter" style=" margin-left:12%;" align="center">
+				<div class="container-login100">
+				<div class="wrap-login100">
                  <div class="text-center">
-                        <h3> <img src="assets\forget-password.jpg "alt="IMG" class="image"></h3>
+                        <h3> <img src="assets\forget-password.jpg "alt="IMG" class="image" ></h3>
                         <!-- <h2 class="text-center"><i class="glyphicon glyphicon-lock" style="font-size:2em;"></i></h2> -->
                         <div class="panel-body">
-                         <form #personForm="ngForm" (ngSubmit)="onSubmitForm()" nonvalidate>
+                         <form #personForm="ngForm" (ngSubmit)="onSubmitForm()" nonvalidate style="padding-left:38%">
                             <div class="form-group">
                                 <div class="input-group">
                                   <!-- <i class="fa fa-envelope icon color-blue"></i> -->
@@ -128,8 +123,8 @@
                     </div>
                                     
                                 </div>
-                                <div class="form-group">
-                                    <button type="submit"[disabled]="personForm.form.invalid||emailAlreadyExist!=''" class="btn btn-lg btn-primary btn-block">Reset password </button>
+                                <div class="container-login100-form-btn">
+                                    <button type="submit"[disabled]="personForm.form.invalid||emailAlreadyExist!=''" class="login100-form-btn">Reset </button>
                                 </div>
                             </form>
 
@@ -137,7 +132,7 @@
                    
                 
             
-            <div class="row">
+            <div class="row" style="padding-left:37%">
                 <div class="col-md-12">
                  New user? <a href="/register">Register</a><br>
                  Already registered?<a href="/login">Login</a>
