profile component change

--- a/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
+++ b/Creditz-Angular-src/app/applicant-profile/applicant-profile.component.html
@@ -1,6 +1,4 @@
-
-
-<div *ngIf="this.storeRole=='person' and this.store!=null">
+<div *ngIf="this.storeRole=='Person' and this.store!=null">
     <!DOCTYPE html>
     <html>
     <head>
@@ -167,7 +165,7 @@
     </html>
     </div>
     
-    <div *ngIf="this.storeRole=='organization'and this.store!=null">
+    <div *ngIf="this.storeRole=='Organization'and this.store!=null">
     <!DOCTYPE html>
         <html>
         <head>
