changes for select type and policy page also deleted collapse from header

--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -34,18 +34,19 @@
                       <div class="row row2col">
                           <div class="col-md-6 col-left">
                               <p  style="color:white;"> 
-                                1. Flat EMI<br><br>
-                                2. 13.5% intrest rate on individual Loan<br><br>
-                                3. Secured loans<br><br>
-                                4. Loans for small organizations.<br><br>
-                                5. Want to start Startup? We are here<br><br>
+                               <i> 1. Flat EMI</i><br><br>
+                               <i> 2. 13.5% interest rate on individual Loan</i><br><br>
+                               <i>3. Un-Secured loans- our policy to help our consumers to have an amzing loaning experiance</i><br><br>
+                                <i>4. Loans for small organizations.</i><br><br>
+                                <i>5. Want to start Startup? We are here</i><br><br>
   
                               </p>
                           </div>
                           <div class="col-md-6 col-right">
                               <p  style="color:white;">      
-                              6. What are our screening POLICY<br><br>
-                              7. Check your Emi by yourself before Applying! because we care about your credit score!<br>
+                                <i> 6. What are our screening POLICY ?? Only require pan card ,
+                                  for your application procedure,no more docs.</i><br><br>
+                                    <i>7. Check your Emi by yourself before Applying! because we care about your credit score!</i><br>
                               </p>
                               <p  style="color:white;"><i>Happy Loaning!</i></p>
                           </div>
@@ -104,7 +105,8 @@
       </div>
   
       <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
-  
+      <br><br>Max Duration: 100 months<br>
+  Max Amount: 70Lakhs.
   
       </form>
       </div>
