--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.css
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.css
@@ -12,6 +12,13 @@ input[type=text], input[type=password] {
   border: 1px solid #ccc;
   box-sizing: border-box;
 }
+
+.md-dialog-container {
+  background-color: #000;
+  width: 250px;
+  height: 250px
+}
+
 /* 
 .button {
   display: inline-block;
@@ -28,9 +35,9 @@ input[type=text], input[type=password] {
    background-repeat: no-repeat;
    position: fixed;
    float: right;
-   margin-top: -6%;
+   margin-top: -2%;
    margin-right: 5px;
-   margin-left: 78%;
+   margin-left: 80%;
    z-index: 9;
 
   }
@@ -400,6 +407,9 @@ iframe {
   background: #333333;
 }
 
+.login100-form-btn:disabled{
+  cursor: not-allowed;
+}
 
 
 /*------------------------------------------------------------------
