updates, in angular and spring boot

--- a/Creditz-Angular-src/app/history/history.component.html
+++ b/Creditz-Angular-src/app/history/history.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="this.store !=null">
 <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Enter Keyword">
@@ -39,4 +40,5 @@
 
    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+</div>
 </div>
