--- a/Creditz-Angular-src/app/header/header.component.css
+++ b/Creditz-Angular-src/app/header/header.component.css
@@ -3,7 +3,7 @@
 }
 
 .profileButton {
-  background-image: url(src\assets\sinpleIcon.png);
+  background-image: url(src\assets\info.gif);
     background-size: 100px 100px;
     width: 100px; 
     height: 90px; 
