changes in forgot password and mail Service

--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.html
@@ -59,14 +59,12 @@
                   placeholder="Password"  
                   type="password" required>
                  </show-hide-password>
-                 <div *ngIf="this.secondFormGroup.controls['confirmpassword'].value==''" 
+                 <div *ngIf="this.secondFormGroup.controls['password'].value==''" 
                  class="text-danger">
-                 <small> Password is required</small>
+                 <small> Password is required of length of 8 characters</small>
                  </div>
                  </mat-form-field>
-                
-                
-                <br>
+                 <br>
                   
                   <mat-form-field>
                     
@@ -78,6 +76,7 @@
                   <div *ngIf="this.secondFormGroup.controls['confirmpassword'].value==''"  class="text-danger">
                     <small>Confirm Password is required</small>
                   </div>
+                  
                   <div *ngIf="this.secondFormGroup.controls['password'].value!=this.secondFormGroup.controls['confirmpassword'].value&& 
                   this.secondFormGroup.controls['confirmpassword'].value!=''&&
                   this.secondFormGroup.controls['confirmpassword'].value!=''"  class="text-danger">
