--- a/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
+++ b/Creditz-Angular-src/app/organization-user-calculator/organization-user-calculator.component.html
@@ -1,116 +1,84 @@
 <div style="max-width:50">
   <button class="birdButton" (click)="checkusertype()">Apply Here</button>
-  </div>
-  
-  <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
-  <!--<br>
-  ABOUT Personal User Policies(key points)<br>
-  1.FLAT EMI POLICY<br>
-  2.11.5% intrest rate on individual Loan<br>
-  3.Un-Secured loans<br>
-  4. loan for your buisness<br>
-  5. Want to start Startup? We are here<br>
-  6. What are our screening POLICY<br>
-  7. Check your Emi by yourself before Applying! because we care about your credit score!<br>-->
-  
-  
-  
+</div>  
+<div style="min-width: 40%; margin-right:5%; width: 60%; float: right;" >
   <div id="wrap">
-  
-  <div class="container">
-    <img src="assets/blank.png" alt="" style="width:2%; height:1%">
-  <!--  <div class="center-left" ><h1 style=" font-size: 40px;" aTilt>Policy:</h1><br>
-   </div><br> -->
-  <!--    <div class="bottom-right">
-      <img src="assets/loan.png" alt="" style="width:70%; align:right;">
-      </div>-->
-  </div>
-  
-      <div class="space-footer">
-          <section class="white">
-              <div class="container">
-                  <article class="orange-box">
-                     <h1  style="color:white;">Policy for Organizations<br></h1>
-                      <div class="row row2col">
-                          <div class="col-md-6 col-left">
-                              <p  style="color:white;"> 
-                               <i> 1. Flat EMI</i><br><br>
-                               <i> 2. 13.5% interest rate on individual Loan</i><br><br>
-                               <i>3. Un-Secured loans- our policy to help our consumers to have an amzing loaning experiance</i><br><br>
-                                <i>4. Loans for small organizations.</i><br><br>
-                                <i>5. Want to start Startup? We are here</i><br><br>
-  
-                              </p>
-                          </div>
-                          <div class="col-md-6 col-right">
-                              <p  style="color:white;">      
-                                <i> 6. What are our screening POLICY ?? Only require pan card ,
-                                  for your application procedure,no more docs.</i><br><br>
-                                    <i>7. Check your Emi by yourself before Applying! because we care about your credit score!</i><br>
-                              </p>
-                              <p  style="color:white;"><i>Happy Loaning!</i></p>
-                          </div>
-                  </div></article>
-                  <div class="clearfix"></div>
+    <div class="container">
+      <img src="assets/blank.png" alt="" style="width:2%; height:1%">
+    </div>
+    <div class="space-footer">
+      <section class="white">
+        <div class="container">
+          <article class="orange-box">
+            <h1  style="color:white;">Policy for Organizations<br></h1>
+              <div class="row row2col">
+                <div class="col-md-6 col-left">
+                  <p  style="color:white;"> 
+                    <i> 1. Flat EMI</i><br><br>
+                    <i> 2. 13.5% interest rate on Organization Loan</i><br><br>
+                    <i> 3. Un-Secured loans- our policy to help our consumers to have an amzing loaning experiance</i><br><br>
+                    <i>4. Loans for small organizations.</i><br><br>
+                    <i>5. Want to start Startup? We are here</i><br><br> 
+                  </p>
+                </div>
+                <div class="col-md-6 col-right">
+                  <p  style="color:white;">      
+                    <i> 6. What are our screening POLICY ?? Only require pan card ,
+                        for your application procedure,no more docs.</i><br><br>
+                    <i>7. Check your Emi by yourself before Applying! because we care about your credit score!</i><br>
+                  </p>
+                  <p  style="color:white;"><i>Happy Loaning!</i>
+                  </p>
+                </div>
               </div>
-              
-          </section>
-      </div>
+            </article>
+            <div class="clearfix">
+            </div>
+          </div>      
+      </section>
+    </div>
+  </div>  
+</div>
   
-  
-  <!--===========================================================-->
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  <!--===========================================================-->
-  
-        </div>
-  
-   <!--  <div class="container-login100-form-btn" >
-        <button class="login100-form-btn" (click)="goToUrl('individual-user/individual-user-application')">Apply Here!</button>
-      </div>
-  -->
-  </div>
-  
-  <div style=" display:block; float: left; max-width:25%; margin-left:5%" >
-  
+<div style=" display:block; float: left; max-width:25%; margin-left:5%" >
   <div class="limiter">
       <div class="container-login100"><br>
-      <H1 class=".login100-form-title " aTilt>Calculate Your EMI</H1><br>
-      <div class="wrap-login100">
-  
-      <form #calculator="ngForm" (ngSubmit)="calculateEMI()" class="login100-form" style="border:none;" ><br>
-  
-              <div class="container" aTilt >
-            <img src="assets/calculator.jpeg" alt="IMG"  style="width:100%;height:100%;"> 
-          </div>
-  
-  <div class="wrap-input100" >
-        <input type="number" class="input100" placeholder="Loan Amount" name="principle" [(ngModel)] = calculatorModel.principle >
-               <span class="focus-input100"></span>
+        <H1 class=".login100-form-title " aTilt>Calculate Your EMI</H1><br>
+          <div class="wrap-login100">
+            <form #calculator="ngForm" 
+            (ngSubmit)="calculateEMI()" 
+            class="login100-form" 
+            style="border:none;" ><br>
+            <div class="container" aTilt >
+              <img src="assets/calculator.jpeg" 
+              alt="IMG"  
+              style="width:100%;height:100%;"> 
+            </div>
+            <div class="wrap-input100" >
+              <input type="number" 
+              class="input100" 
+              placeholder="Loan Amount" 
+              name="principle" 
+              [(ngModel)] = calculatorModel.principle >
+              <span class="focus-input100"></span>
+            </div>
+            <div class="wrap-input100" >
+              <input type="number" 
+              class="input100" 
+              placeholder="Loan Duration-Month" 
+              name="tenure" 
+              [(ngModel)] = calculatorModel.tenure><br>
+              <span class="focus-input100">
+              </span>
+            </div>
+            <label aTilt>
+              <br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}
+            </label>
+            <br>
+            <br>Max Duration: 100 months<br>
+                Max Amount: 70Lakhs.
+          </form>
       </div>
-  
-  
-      <div class="wrap-input100" >
-        <input type="number" class="input100" placeholder="Loan Duration-Month" name="tenure" [(ngModel)] = calculatorModel.tenure><br>
-                <span class="focus-input100"></span>
-      </div>
-  
-      <label aTilt><br>Your EMI Per Month: {{this.calculateEMI(calculatorModel.principle,calculatorModel.tenure)}}</label>
-      <br><br>Max Duration: 100 months<br>
-  Max Amount: 70Lakhs.
-  
-      </form>
-      </div>
-      </div>
-      </div>
-  
-  </div>
+    </div>
+  </div> 
+</div>
