--- a/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
+++ b/Creditz-Angular-src/app/organizational-user/organizational-user.component.html
@@ -1,208 +1,211 @@
-  
-   <!-- <img src="assets/img/short-term-business-loans.jpg"  alt="alternative text" style="position: relative;"  class="img1" > -->
-   
- 
-   <div *ngIf="this.storeRole=='Organization' and this.store!=null">
-    <!-- <div style="display: block; min-width: 400px; margin-left:29%; width: 100%;" > -->
-    <!-- <div class="outtermost1"> -->
-      <div class="limiter">
-                 
-          <!-- <div style=" float: left;"> -->
-            <div class="container" >
-              <img src="assets/img/short-term-business-loans.jpg" alt="IMG" class="img1">
-            </div>
-
-            <div style="color: black; background-color: darkgray; height: 40%;">
-              <br>
-              <br>
-              <div  style="font-size: 200%;padding-left: 50%; font-family: fantasy; color: black;">
-                Why CREDITZ ??
-                </div>
-                <br>
-                <br>
-                <div style="padding-left: 10%;font-style: oblique; font-size: medium;">
-                Creditz hopes to become your partner
-                <br>
-                 in laying a strong foundation for your businesses and 
-                 <br>helping 
-                 it grow to its full potential. 
-              </div>
-            </div>
-              
-    <!-- </div> -->
-      </div>
-    
-          
-          <div class="wrap-login100"  >
-  
-  
-   <form #application="ngForm"  method="POST" class="login100-form" style="border:none;" >
-  
-        <div class="wrap-input100"> 
-        <H1>Your Credit Details</H1>
-                    <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
+<div *ngIf="this.storeRole=='Organization' and this.store!=null">
+  <div class="limiter">
+    <div class="container" >
+      <img src="assets/img/short-term-business-loans.jpg" 
+      alt="IMG" 
+      class="img1">
+    </div>
+    <div style="color: black; background-color: darkgray; height: 40%;">
+      <br>
+      <br>
+        <div  style="font-size: 200%;padding-left: 50%; font-family: fantasy; color: black;">
+        Why CREDITZ ??
         </div>
-    <br>
-        <div class="wrap-input100">
-          <input type="text" #pancard="ngModel" placeholder="   Pan Card - AAAA1234A" 
-          class="input100" name="pancard" pattern="(^([a-zA-Z]{5})([0-9]{4})([a-zA-Z]{1})$)"
-          [(ngModel)]="applicationModel.pancard" required>
-          <div *ngIf="pancard.invalid && (pancard.dirty || pancard.touched)"
-          class="text-danger">      
-        <small *ngIf="pancard.errors.required">
-          PAN no. is required.
-        </small>
-        <small *ngIf="pancard.errors.pattern">
-          fill correct pan no.
-        </small>
-      
-                <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
-        </div> 
+        <br>
+        <br>
+          <div style="padding-left: 10%;font-style: oblique; font-size: medium;">
+          Creditz hopes to become your partner
+            <br>
+            in laying a strong foundation for your businesses and 
+            <br>
+            helping it grow to its full potential. 
+          </div>
+    </div>
+  </div>        
+  <div class="wrap-login100">
+    <form #application="ngForm"  method="POST" class="login100-form" style="border:none;" >
+      <div class="wrap-input100"> 
+        <H1>Your Credit Details</H1>
+            <span class="focus-input100"></span>
       </div>
-            <div class="wrap-input100">
-          <input type="number" #loanAmount="ngModel" placeholder="Loan Amount Required" 
-          class="input100" name="loanAmount" [(ngModel)]="applicationModel.loanAmount" required>
+      <br>
+        <div class="wrap-input100">
+          <input type="text" 
+          #pancard="ngModel" 
+          placeholder="Pan Card - AAAA1234A" 
+          class="input100" 
+          name="pancard" 
+          pattern="(^([a-zA-Z]{5})([0-9]{4})([a-zA-Z]{1})$)"
+          [(ngModel)]="applicationModel.pancard" 
+          required>
+            <div *ngIf="pancard.invalid && (pancard.dirty || pancard.touched)"
+            class="text-danger">      
+              <small *ngIf="pancard.errors.required">
+              PAN no. is required.
+              </small>
+              <small *ngIf="pancard.errors.pattern">
+              fill correct pan no.
+              </small>
+              <span class="focus-input100"></span>
+            </div> 
+        </div>
+        <div class="wrap-input100">
+          <input type="number" 
+          #loanAmount="ngModel" 
+          placeholder="Loan Amount Required" 
+          class="input100" 
+          name="loanAmount" 
+          [(ngModel)]="applicationModel.loanAmount" 
+          required>
           <div *ngIf="loanAmount.invalid && (loanAmount.dirty || loanAmount.touched)"
           class="text-danger">      
-        <small *ngIf="loanAmount.errors.required">
-          Loan amount is required.
-        </small>
-        
-               
-                <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
+            <small *ngIf="loanAmount.errors.required">
+            Loan amount is required.
+            </small> 
+            <span class="focus-input100"></span>
+          </div>
         </div>
-      </div>
-            <div class="wrap-input100">
-          <input type="number" #businessAge="ngModel" placeholder="How old is your business(in months)?"
-           class="input100" name="businessAge" [(ngModel)]="applicationModel.businessAge" required>
+        <div class="wrap-input100">
+          <input type="number" 
+          #businessAge="ngModel" 
+          placeholder="How old is your business(in months)?"
+          class="input100" 
+          name="businessAge" 
+          [(ngModel)]="applicationModel.businessAge" 
+          required>
           <div *ngIf="businessAge.invalid && (businessAge.dirty || businessAge.touched)"
           class="text-danger">      
-        <small *ngIf="businessAge.errors.required">
-          Enter the age of your business.
-        </small>
-    
-                <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
-        </div>
-      </div>
-          
-  
-        
-         <div class="wrap-input100">
-          <input type="number" #revenue="ngModel" placeholder="Revenue" class="input100" 
-          name="revenue" [(ngModel)]="applicationModel.revenue" required>
-          <div *ngIf="revenue.invalid && (revenue.dirty || revenue.touched)"
-          class="text-danger">      
-        <small *ngIf="revenue.errors.required">
-          Enter the total revenue.
-        </small>
-          
-          <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
-        </div>
-      </div>
+            <small *ngIf="businessAge.errors.required">
+            Enter the age of your business.
+            </small>
+              <span class="focus-input100"></span>
+          </div>
+        </div>   
         <div class="wrap-input100">
-          <input type="number" #employeeCount="ngModel" placeholder="Total number of employee" class="input100"
-           name="employeeCount" [(ngModel)]="applicationModel.employeeCount" required>
-           <div *ngIf="employeeCount.invalid && (employeeCount.dirty || employeeCount.touched)"
-          class="text-danger">
-           <small *ngIf="employeeCount.errors.required">
-            Enter the number of employees.
-          </small>  
-           
-           <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
+          <input type="number" 
+          #revenue="ngModel" 
+          placeholder="Revenue" 
+          class="input100" 
+          name="revenue" 
+          [(ngModel)]="applicationModel.revenue" 
+          required>
+            <div *ngIf="revenue.invalid && (revenue.dirty || revenue.touched)"
+            class="text-danger">      
+              <small *ngIf="revenue.errors.required">
+              Enter the total revenue.
+              </small>
+              <span class="focus-input100"></span>
+            </div>
         </div>
-      </div>
-        
         <div class="wrap-input100">
-          <input type="text" #licenseno="ngModel" placeholder="License Number" 
-          class="input100" name="licenseno" [(ngModel)]="applicationModel.licenseNumber" required>
-          <div *ngIf="licenseno.invalid && (licenseno.dirty || licenseno.touched)"
-          class="text-danger">
-          <small *ngIf="licenseno.errors.required">
-            Enter the licenseNumber.
-          </small>    
-          <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
+          <input type="number" 
+          #employeeCount="ngModel" 
+          placeholder="Total number of employee" 
+          class="input100"
+          name="employeeCount" 
+          [(ngModel)]="applicationModel.employeeCount" 
+          required>
+            <div *ngIf="employeeCount.invalid && (employeeCount.dirty || employeeCount.touched)"
+            class="text-danger">
+              <small *ngIf="employeeCount.errors.required">
+              Enter the number of employees.
+              </small>  
+              <span class="focus-input100"></span>
+            </div>
         </div>
-      </div>
-        
         <div class="wrap-input100">
-          <input type="text"  #organizationType="ngModel" placeholder="Type of Organization eg.pvt. ltd."
-           class="input100" name="organizationType"
-           [(ngModel)]="applicationModel.organizationType" required >
-            <!-- <option value="" ></option>Type of Organization</option> -->
-            <!-- <option value=""  [selected] > Type of organization</option>
-            <option *ngFor="let city of City" [ngValue]="city">{{city}}</option>
-         </select> -->
-          <!-- <input type="text" #organizationType="ngModel" placeholder="Type of Organization" class="input100" name="organizationType" [(ngModel)]="applicationModel.organizationType" required>           -->
-          <div *ngIf="organizationType.invalid && (organizationType.dirty || organizationType.touched)"
-          class="text-danger">
-          <small *ngIf="organizationType.errors.required">
-           Enter the type of Organization e.g.not registered company,limited company etc.
-          </small>     
-          
-          <span class="focus-input100"></span>
-                  <!-- <i class="fa fa-envelope" aria-hidden="true"></i> -->
-        </div>
-      </div>
-        
-        <div class="wrap-input100">
-          <input type="number" #loanTenure="ngModel" placeholder="Duration of Repayment- in Months"
-           class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
-          <div *ngIf="loanTenure.invalid && (loanTenure.dirty || loanTenure.touched)"
-          class="text-danger">
-          <small *ngIf="loanTenure.errors.required">
-            Duration of Repayment is required.
-           </small>     
-                
-          <span class="focus-input100"></span>
-                   <!-- <i class="fa fa-envelope" aria-hidden="true"></i>  -->
-        </div>
-</div>
-
-<div class="wrap-input100">   
-  <label style="margin:20px">  Do you have any past criminal records: </label><br>
-       <input type="radio" class="toggle" name="criminalRecord" 
-        [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <!--<br> -->
-       <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=1 style="margin:15px">  Yes <br>
-      <span class="focus-input100"></span>
-</div>
-
-<div class="wrap-input100">   
-  <label style="margin:20px">  Are you Bankrupt: </label><br>
-       <input type="radio" class="toggle" name="bankruptcy"
-         [(ngModel)]="applicationModel.bankruptcy" value=0 style="margin:15px">  No <!-- <br> -->
-       <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
-      <span class="focus-input100"></span>
-</div>
-
-     
-        <div class="container-login100-form-btn" >
-          <button class="login100-form-btn"  [disabled]="!application.form.valid" (click)="apply()">Apply</button>
-         
-       
+          <input type="text" 
+          #licenseno="ngModel" 
+          placeholder="License Number" 
+          class="input100" 
+          name="licenseno" 
+          [(ngModel)]="applicationModel.licenseNumber" 
+          required>
+            <div *ngIf="licenseno.invalid && (licenseno.dirty || licenseno.touched)"
+            class="text-danger">
+              <small *ngIf="licenseno.errors.required">
+              Enter the licenseNumber.
+              </small>    
+              <span class="focus-input100"></span>
+            </div>
         </div> 
-    
-    </form>
-  
-    </div> 
-     
-    </div> 
-    <!-- </div> -->
-    <!-- </div> -->
-   
-    <div *ngIf="this.store==null">
-      <app-login></app-login>
-      </div>
-
-      <!-- <div *ngIf="this.store!=null && this.storeRole=='Person'">
-
-        <span style="font-style: normal;font-size: x-large; font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;"></span> 
-       alert("Sorry !!!!!! Need to log out. you are not organizational user.... ")
+        <div class="wrap-input100">
+          <input type="text"  
+          #organizationType="ngModel" 
+          placeholder="Type of Organization eg.pvt. ltd."
+          class="input100" 
+          name="organizationType"
+          [(ngModel)]="applicationModel.organizationType" 
+          required >
+            <div *ngIf="organizationType.invalid && (organizationType.dirty || organizationType.touched)"
+            class="text-danger">
+              <small *ngIf="organizationType.errors.required">
+              Enter the type of Organization e.g.not registered company,limited company etc.
+              </small>             
+              <span class="focus-input100"></span>
+            </div>
+        </div>       
+        <div class="wrap-input100">
+          <input type="number" 
+          #loanTenure="ngModel" 
+          placeholder="Duration of Repayment- in Months"
+          class="input100" 
+          name="loanTenure" 
+          [(ngModel)]="applicationModel.loanTenure" 
+          required>
+            <div *ngIf="loanTenure.invalid && (loanTenure.dirty || loanTenure.touched)"
+            class="text-danger">
+              <small *ngIf="loanTenure.errors.required">
+              Duration of Repayment is required.
+              </small>                     
+              <span class="focus-input100"></span>
+            </div>
         </div>
-   -->
+        <div class="wrap-input100">   
+          <label style="margin:20px">  Do you have any past criminal records: 
+          </label>
+          <br>
+          <input type="radio" 
+          class="toggle" 
+          name="criminalRecord" 
+          [(ngModel)]="applicationModel.criminalRecord" 
+          value=0 
+          style="margin:15px">  No  <!--<br> -->
+          <input type="radio" 
+          class="toggle" 
+          name="criminalRecord" 
+          [(ngModel)]="applicationModel.criminalRecord" 
+          value=1 
+          style="margin:15px">  Yes 
+          <br>
+          <span class="focus-input100"></span>
+        </div>
+        <div class="wrap-input100">   
+          <label style="margin:20px">  Are you Bankrupt: </label><br>
+          <input type="radio" 
+          class="toggle" 
+          name="bankruptcy"
+          [(ngModel)]="applicationModel.bankruptcy" 
+          value=0 style="margin:15px">  No    
+          <input type="radio" 
+          class="toggle" 
+          name="bankruptcy" 
+          [(ngModel)]="applicationModel.bankruptcy" 
+          value=1 
+          style="margin:15px">  Yes 
+          <br>
+            <span class="focus-input100">           
+            </span>
+        </div>
+        <div class="container-login100-form-btn" >
+          <button class="login100-form-btn"  
+          [disabled]="!application.form.valid" 
+          (click)="apply()">Apply
+          </button>  
+        </div> 
+    </form> 
+  </div>    
+</div> 
+<div *ngIf="this.store==null">
+    <app-login></app-login>
+</div>
