--- a/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
+++ b/Creditz-Angular-src/app/organization-creditor-table-list/organization-creditor-table-list.component.html
@@ -14,21 +14,23 @@
                    <h4>Admin</h4>
                 </div>
            </div>
-           <a mat-list-item [routerLink]="'/organization-creditor-table-list'">
-            <mat-icon>question_answer</mat-icon>
-            <span>Organization Applications</span>
-        </a>
-        <br>
-        <a mat-list-item [routerLink]="'/adminsidenav'">
+           <a mat-list-item [routerLink]="'/admin'">
             <mat-icon>question_answer</mat-icon>
             <span>Person Applications</span>
-        </a>
-        <br>
-        <a mat-list-item [routerLink]="'/analyst-registration'">
+           </a>
+           
+           <br>
+           <a mat-list-item [routerLink]="'/organization-creditor-list'">
+            <mat-icon>question_answer</mat-icon>
+            <span>Organization Applications</span>
+           </a>
+           <br>
+        
+           <a mat-list-item [routerLink]="'/analyst-registration'">
             <mat-icon>person_add</mat-icon>
             <span>RegisterAnalyst</span>
-        </a>
-        <br>
+           </a>
+           <br>
 
         <a mat-list-item [routerLink]="'/show-analyst'">
             <mat-icon>delete</mat-icon>
