--- a/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
+++ b/Creditz-Angular-src/app/show-analyst/show-analyst.component.html
@@ -12,16 +12,17 @@
                  <h4>Admin</h4>
               </div>
          </div>
-         <a mat-list-item [routerLink]="'/organization-creditor-table-list'">
-          <mat-icon>question_answer</mat-icon>
-          <span>Organization Applications</span>
-      </a>
-      <br>
-      <a mat-list-item [routerLink]="'/adminsidenav'">
+         <a mat-list-item [routerLink]="'/admin'">
           <mat-icon>question_answer</mat-icon>
           <span>Person Applications</span>
       </a>
       <br>
+         <a mat-list-item [routerLink]="'/organization-creditor-list'">
+          <mat-icon>question_answer</mat-icon>
+          <span>Organization Applications</span>
+      </a>
+      <br>
+     
       <a mat-list-item [routerLink]="'/analyst-registration'">
           <mat-icon>person_add</mat-icon>
           <span>RegisterAnalyst</span>
