finalized application page

--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.css
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.css
@@ -71,3 +71,13 @@
     justify-content: space-between;
     padding: 8% 10% 25% 10%;
   }
+
+  .centered {
+    position: absolute;
+    top: 59%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: .85;
+  }
+
+  
