--- a/Creditz-Angular-src/app/individual-user/individual-user.component.html
+++ b/Creditz-Angular-src/app/individual-user/individual-user.component.html
@@ -1,29 +1,14 @@
 <div style="max-width:50">
-<button class="birdButton" (click)="openDialog()">Apply Here</button>
+<button class="birdButton" (click)="goToUrl('individual-user/individual-user-application')">Apply Here</button>
 </div>
 
 <div style="min-width: 40%; margin-right:5%; width: 60%; float: right; align: right" >
-<!--<br>
-ABOUT Personal User Policies(key points)<br>
-1.FLAT EMI POLICY<br>
-2.11.5% intrest rate on individual Loan<br>
-3.Un-Secured loans<br>
-4. loan for your buisness<br>
-5. Want to start Startup? We are here<br>
-6. What are our screening POLICY<br>
-7. Check your Emi by yourself before Applying! because we care about your credit score!<br>-->
-
-
 
 <div id="wrap">
 
 <div class="container">
   <img src="assets/blank.png" alt="" style="width:2%; height:1%">
-<!--  <div class="center-left" ><h1 style=" font-size: 40px;" aTilt>Policy:</h1><br>
- </div><br> -->
-<!--    <div class="bottom-right">
-    <img src="assets/loan.png" alt="" style="width:70%; align:right;">
-    </div>-->
+
 </div>
 
     <div class="space-footer">
