--- a/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
+++ b/Creditz-Angular-src/app/individual-user-application/individual-user-application.component.html
@@ -1,9 +1,107 @@
+<div class="container">
+  <img src="assets/farm.jpg" alt="IMG" style="width:100%; margin-top:-2%">
+
+<mat-horizontal-stepper linear #stepper class="centered"> 
+  <mat-step [stepControl]="firstFormGroup" >
+    <form [formGroup]="firstFormGroup">
+      <ng-template matStepLabel>Your Credit Details</ng-template>
+      <mat-form-field>
+
+    <mat-label>Pan Card</mat-label>
+        <input matInput placeholder="Pancard" formControlName="pancard" pattern="(^([a-zA-Z]{5})([0-9]{4})([a-zA-Z]{1})$)" required>
+      </mat-form-field><br>
+
+      <mat-form-field>
+        <mat-label>Loan Amount</mat-label>
+        <input matInput type="number" placeholder="Loan Amount" formControlName="loanAmount" required>
+      </mat-form-field><br>
+
+      <mat-form-field>
+        <mat-label>Tenure</mat-label>
+        <input matInput type="number" placeholder="Repayment Duration" formControlName="loanTenure" required>
+      </mat-form-field><br>
+
+      <mat-form-field>
+        <mat-label>age</mat-label>
+        <input matInput type="number" placeholder="Your age" formControlName="age" required>
+      </mat-form-field><br>
+
+      <mat-form-field>
+        <mat-label>Occupation</mat-label>
+        <input matInput placeholder="Your Occupation" formControlName="occupation" required>
+      </mat-form-field><br>
+      <div>
+        <button mat-raised-button matStepperNext>Next</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step [stepControl]="secondFormGroup">
+    <form [formGroup]="secondFormGroup">
+      <ng-template matStepLabel>Answer the Questionnaire</ng-template>
+
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Enter your Gender: </label><br>
+                              <input type="radio" class="toggle" name="gender" formControlName="gender" value="Male" style="margin:15px">  Male  
+                              <input type="radio" class="toggle" name="gender" formControlName="gender" value="Female" style="margin:15px">  Female 
+                              <input type="radio" class="toggle" name="gender" formControlName="gender" value="Other" style="margin:15px">  Other
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Do you have any past criminal records: </label><br>
+                              <input type="radio" class="toggle" name="criminalRecord" formControlName="criminalRecord" value=0 style="margin:15px">  No  
+                              <input type="radio" class="toggle" name="criminalRecord" formControlName="criminalRecord" value=1 style="margin:15px">  Yes <br>
+                              <span class="focus-input100"></span>
+                      </div>
+
+                      <div class="wrap-input100">   
+                          <label style="margin:20px">  Are you Bankrupt: </label><br>
+                              <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=0 style="margin:15px" required>  No  
+                              <input type="radio" class="toggle" name="bankruptcy" formControlName="bankruptcy" value=1 style="margin:15px" required>  Yes <br>
+                              <span class="focus-input100"></span>
+                      </div>
+
+      <div>
+        <button mat-raised-button matStepperPrevious>Back</button>
+        <button mat-raised-button matStepperNext [disabled]="!secondFormGroup.valid">submit</button>
+      </div>
+    </form>
+  </mat-step>
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    <div><br>
+      <h2>You are all set and ready to rock!</h2><br>
+      <h3>We will take the information submitted by you at during the registration <br> as your personal information</h3>
+      <h3>Our representative will mail you shortly regarding your application status.</h3>
+      <h3>Once your application is approved, you will get a mail listing all the essential <br> 
+      documents required, please visit your nearest branch with those documents,<br>
+      along with original copy of your pancard and photo Id</h3>
+<br><br>
+      <button mat-raised-button (click)="apply()">Confirm</button>
+      <h6>By clicking this button you accept our terms and conditions*</h6>
+      <h6>and ensure that all the details entered by you is correct, and take the liablities further actions if otherwise.</h6>
+    </div>
+  </mat-step>
+</mat-horizontal-stepper>
+
+</div>
+
+
+
+
+<!--
+
+
+
 <div *ngIf="this.storeRole=='Person' and this.store!=null" style="margin-left:22%">
   <div class="limiter">
 <mat-dialog-content>
           <H1 mat-dialog-title class=".login100-form-title " aTilt>   Your Credit Details</H1><br>
 
       <div class="wrap-login100">
+
+
 
               <form #application="ngForm" (ngSubmit)="apply()" method="POST" class="login100-form validate-form" style="border:none;" >
                   
@@ -59,7 +157,7 @@
 
                       <div class="wrap-input100">   
                           <label style="margin:20px">  Are you Bankrupt: </label><br>
-                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=0 style="margin:15px">  No  <br>
+                              <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <br>
                               <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
                               <span class="focus-input100"></span>
                       </div>
@@ -91,89 +189,10 @@
    </div>
 
 
-<!--
+-->
 
 
 
-<div style=" min-width:68%; max-width:68%; float:right; align: right;"   *ngIf="this.storeRole=='Person' and this.store!=null">
-            <div class="container" >
-              <img src="assets/loan.png" alt="IMG" class="image">
-            </div>
-</div>
-
-<div *ngIf="this.storeRole=='Person' and this.store!=null" style="max-width:32%; min-width:32%; float:left; align:left">
-  <div class="limiter">
-      <div class="container-login100">
-          <H1 class=".login100-form-title " aTilt>Your Credit Details...</H1><br>
-      <div class="wrap-login100">
-
-
-      <form #application="ngForm" (ngSubmit)="apply()" method="POST" class="login100-form validate-form" style="border:none;" >
-   				
-           <div class="container" aTilt >
-					<img src="assets/calculator.jpeg" alt="IMG"  style="width:100%;height:100%;"> 
-				</div>
-
-      <div class="wrap-input100">
-        <input type="text" placeholder="Pan Card - AAAA1234A" class="input100" name="pancard" [(ngModel)]="applicationModel.pancard" required>
-              <span class="focus-input100"></span>
-      </div>
-
-          <div class="wrap-input100">
-        <input type="number" placeholder="Loan Amount Required" class="input100" name="loanAmount" [(ngModel)]="applicationModel.loanAmount" required>
-              <span class="focus-input100"></span>
-      </div>
-
-          <div class="wrap-input100">
-        <input type="number" placeholder="Your Age" class="input100" name="age" [(ngModel)]="applicationModel.age" required>
-              <span class="focus-input100"></span>
-      </div>
-      
-      <div class="wrap-input100">
-        <input type="text" placeholder="Your Occupation" class="input100" name="occupation" [(ngModel)]="applicationModel.occupation" required>
-              <span class="focus-input100"></span>
-      </div>
-
-      <div class="wrap-input100">
-        <input type="number" placeholder="Duration of Repayment- in Months" class="input100" name="loanTenure" [(ngModel)]="applicationModel.loanTenure" required>
-              <span class="focus-input100"></span>
-      </div>
-
-      <div class="wrap-input100">   
-          <label style="margin:20px">  Enter your Gender: </label><br>
-               <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Male" style="margin:15px">  Male  <br>
-               <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Female" style="margin:15px">  Female <br>
-               <input type="radio" class="toggle" name="gender" [(ngModel)]="applicationModel.gender" value="Other" style="margin:15px">  Other
-              <span class="focus-input100"></span>
-      </div>
-
-      <div class="wrap-input100">   
-          <label style="margin:20px">  Do you have any past criminal records: </label><br>
-               <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=0 style="margin:15px">  No  <br>
-               <input type="radio" class="toggle" name="criminalRecord" [(ngModel)]="applicationModel.criminalRecord" value=1 style="margin:15px">  Yes <br>
-              <span class="focus-input100"></span>
-      </div>
-
-      <div class="wrap-input100">   
-          <label style="margin:20px">  Are you Bankrupt: </label><br>
-               <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=0 style="margin:15px">  No  <br>
-               <input type="radio" class="toggle" name="bankruptcy" [(ngModel)]="applicationModel.bankruptcy" value=1 style="margin:15px">  Yes <br>
-              <span class="focus-input100"></span>
-      </div>
-
-  <br>
-      <div class="container-login100-form-btn" >
-        <button type="submit" class="login100-form-btn"  [disabled]="application.form.invalid">Apply</button>
-      </div>
-
-  </form>
-
-  </div>
-  </div>
-  </div>
-</div>
 <div *ngIf="this.store==null">
 <app-login></app-login>
 </div>
-
--->
