--- a/Creditz-Angular-src/app/forgot-password/forgot-password.component.css
+++ b/Creditz-Angular-src/app/forgot-password/forgot-password.component.css
@@ -73,9 +73,8 @@
   }
 
   .centered {
-    position: absolute;
-    top: 59%;
-    left: 50%;
+    margin-top:-35%;
+    margin-left: 50%;
     transform: translate(-50%, -50%);
     opacity: .85;
   }
