changes in url and register

--- a/Creditz-Angular-src/app/header/header.component.html
+++ b/Creditz-Angular-src/app/header/header.component.html
@@ -26,7 +26,7 @@
           <div class="dropdown-menu" aria-labelledby="policy">
             <a class="dropdown-item" href="individual-user">Individual Policies</a>
              <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="organization-user-calculator">Organizational Policies</a>
+            <a class="dropdown-item" href="organization-policy">Organizational Policies</a>
           </div>
       </li>  
 
